fix: adjust top margin for main layout on tablet devices for improved spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -954,14 +954,14 @@ main {
 /* iPad Mini specific - reduce white space */
 @media screen and (min-width: 768px) and (max-width: 810px) {
   .main {
-    margin-top: 8rem !important;
+    margin-top: 6rem !important;
   }
 }
 
 /* iPad Air and larger tablets - more spacing for header clearance */
 @media screen and (min-width: 811px) and (max-width: 1023px) {
   .main {
-    margin-top: 15rem !important;
+    margin-top: 10rem !important;
   }
 }
 
